hphp/hack/test/typecheck/reactive/parse_multiple3.php.exp
File "parse_multiple3.php", line 4, characters 3-27:
Only one of following annotations is allowed: __Pure, __Rx, __RxShallow, __RxLocal, __NonRx. (Parsing[1002])
